market section top bar overflow fix

--- a/styles/sass/sections/_section-market.sass
+++ b/styles/sass/sections/_section-market.sass
@@ -22,6 +22,7 @@
     width: 230px
     height: 65px
     max-height: 65px
+    overflow: hidden
     text-align: center
     position: relative
     &::before
